# httphandler

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  prompt.md  pyproject.toml
http_client/: __init__.py  _cookies.py  _debug.py  client.py  config.py  handler.py  models.py
http_client/_backends/: __init__.py  curl_backend.py  httpx_backend.py
http_client/_fingerprint/: __init__.py  browserforge_adapter.py  headers.py  profiles.py
http_client/_proxy/: __init__.py  base.py  exceptions.py  manager.py  models.py
http_client/_proxy/providers/: __init__.py  generic.py
http_client/backends/: __init__.py  async_backend.py  base.py  thread_backend.py
http_client/fingerprint/: browserforge_adapter.py  headers.py
http_client/safety/: __init__.py  cookie_store.py  proxy_pool.py  rate_limiter.py
http_client/transport/: __init__.py  base.py  curl_transport.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_cookie_store.py  test_fingerprint.py  test_handler.py  test_models.py  test_proxy.py  test_proxy_pool.py  test_rate_limiter.py  test_transport.py
